2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am (BOTAN_SOURCES): distcheck target is failing because
	the headers for Botan are missing.  Add missing line continuation.

2006-12-22  Derek Scherger  <derek@echologic.com>

	* paths.cc (normalize_external_path): factor new function out of
	file_path constructor's external path normalization code
	(file_path::file_path): call new normalization function for
	external paths
	(bookkeeping_path::is_bookkeeping_path): normalize strings as
	external paths before checking for _MTN prefix
	* tests/add_ignores__MTN/__driver__.lua: un-xfail subdir testcase
	* tests/add_inside__MTN_/__driver__.lua: add now ignores
	bookkeeping paths rather than failing on them. account for this
	and check for associated warning on stderr
	* work.cc (editable_working_tree::attach_node): add some
	whitespace, it's cheap

2006-12-22  Derek Scherger  <derek@echologic.com>

	* cmd.hh (args_to_paths): warn about bookkeeping paths but ignore them
	* tests/_MTN_case-folding_security_patch/__driver__.lua:
	mtn add no longer fails but still reports warnings on stderr
	add checks for these warnings
	add checks for ls known not listing bad paths
	* tests/add_ignores__MTN/__driver__.lua:
	un-xfail root glob testcase

2006-12-22  Derek Scherger  <derek@echologic.com>

	* tests/add_ignores__MTN/__driver__.lua: new xfailed test for add *
	which fails on seeing _MTN
	* testsuite.lua: add it

2006-12-22  Derek Scherger  <derek@echologic.com>

	* cmd_list.cc (ls):
	* cmd_ws_commit.cc (mv,co): add semi's to ALIASes so indent-region works
	(pivot_root): tweak indentation
	(add,drop): use args_to_paths and new split_paths function
	* paths.{cc,hh} (split_paths): new function to split a vector of
	file_paths into a set of split_paths

2006-12-21  Richard Levitte  <richard@levitte.org>

	* cmd_netsync.cc (CMD(pull), CMD(push), CMD(sync)): Make it
	visible that more than one pattern can be given.

2006-12-21  Thomas Keller  <me@thomaskeller.biz>
