@@ -1,5 +1,8 @@
 2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>
 
+	* Makefile.am (BOTAN_SOURCES): Remove entries for missing headers,
+	add entries for new headers.
+
 	* Makefile.am (BOTAN_SOURCES): distcheck target is failing because
 	the headers for Botan are missing.  Add missing line continuation.
 
